--- a/Views/Shared/_LayoutCustomer.cshtml
+++ b/Views/Shared/_LayoutCustomer.cshtml
@@ -64,6 +64,7 @@
                     <div class="navbar-nav mx-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a asp-action="Index" asp-controller="HangHoa" class="nav-item nav-link">Shop</a>
+                        <a asp-action="DangKy" asp-controller="KhachHang" class="nav-item nav-link">Đăng Ký</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
